[tool.poetry]
name = "morl-v0001"
version = "0.1.0"
description = ""
authors = ["AminAvan <aminavan.hardware@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.0.0"
torchvision = "0.15.1"
torchaudio = "2.0.1"
gym = "^0.26.2"
tianshou = "^1.1.0"
tensorboard = "^2.19.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"